manifests/trakiabillboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trakiabillboard-ingress
  namespace: trakiabillboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - trakiabillboard.local
      secretName: trakiabillboard-tls
  rules:
    - host: trakiabillboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trakiabillboard-nginx
                port:
                  number: 80
